  mode, and created a status widget to toggle the setting (Evan Wright)

- Fix for tracker 2976661, script tag attributes not syntax highlighted.
  (Dale Anson)

- Fix for tracker 3165177, method/function names not always highlighted.
  (Dale Anson)

- Fix for tracker 846913, jsp syntax highlighting for single line comments.
  (Dale Anson)

}}}
{{{ UI

- Combined Global and Plugin options into a single pane, making Optional plugin
	obsolete. (Alan Ezust - # 3455602)

- jEdit is now always using continuous layout in JSplitPane (Matthieu Casanova)

- Fixed keyboard handling of comboboxes in jedit's option panes.
  (Bug #3415064 - Alan Ezust)

- Changed menus to use Mac-specific symbols for accelerator keys when using OS X
  and the native look & feel (SF.net patch #1950147 - Nathan Gray)

- Added an option (on by default) to use the native Quartz renderer on
  Mac OS X (Evan Wright)

- Fixed keyboard handling of drop-down menus in File System Browser.
  (#1571578 - Alan Ezust)

- Fixed "Use textarea colors" for dockables created in non-metal L&F.
  (#1794400 - Alan Ezust)

- New option in Saving and Backup pane: Use File System Browser dir for
  Save-As (# 1591441 - Alan Ezust)
  
}}}
{{{ Miscellaneous

- Pasting a VFSFile as String dataflavor will now paste the full path instead of
  the name of the file (Matthieu Casanova)

- The EditingOptionPane has now an option to remember the user choice about
  large file treatment (Matthieu Casanova)

- Removed 192mb heap size limit from startup scripts.
  Removed jedit.l4j.ini from Windows package files because no options were left.
  NOTE:
    Old jedit.l4j.ini won't be removed on upgrade. In that case, manual
    removal will be required. Please look for jedit.l4j.ini in the
    install directory after running the installer. If you found only
    "-Xmx192M" in the file, you can remove it or the file itself.

- OS/2 tasks were removed from the Java installer as OS/2 does not